﻿shmuel 17.08.2015 18:56:17 +0200 - build 523

1. M#3035: LuaFAR: Запретить обработку событий в диалогах во время вывода сообщения об ошибке

shmuel 06.08.2015 22:31:56 +0200 - build 522

1. M#3050: Падение при непрерывном вызове DM_KEY

shmuel 26.07.2015 03:06:22 +0200 - build 521

1. LuaFAR: убрано лишнее поле StructSize из таблицы, возвращаемой по DM_GETDIALOGINFO.

shmuel 17.06.2015 23:31:43 +0200 - build 520

1. Меню выбора макроса присвоен GUID ("165AA6E3-C89B-4F82-A0C5-C309243FD21B").

shmuel 16.06.2015 14:56:31 +0200 - build 519

1. Уточнение 518.

shmuel 16.06.2015 14:16:24 +0200 - build 518

1. Продолжение 516: если пользователь назначил свой хоткей, то он имеет преимущество перед
   автоматически назначаемым.

shmuel 16.06.2015 12:37:41 +0200 - build 517

1. Вместо локальной переменной 'status' использовалась глобальная.

shmuel 15.06.2015 17:46:15 +0200 - build 516

1. Пункты меню выбора макроса (выводимого, когда есть несколько макросов, назначенных на одно
   кнопкосочетание) автоматически нумеруются, и их номера являются горячими клавишами.

shmuel 04.06.2015 21:57:25 +0200 - build 515

1. Вызов error() без параметра при загрузке макросов полностью нарушал эту самую загрузку.

shmuel 21.05.2015 23:38:29 +0200 - build 514

1. M#2794: MenuItem: возможность определить имя пункта строкой, а не функцией.

shmuel 07.05.2015 16:59:03 +0200 - build 513

1. LuaFAR: добавлены функции win.GetCurrentDir и win.SetCurrentDir.

shmuel 03.05.2015 16:07:30 +0200 - build 512

1. LuaFAR (generic plugin): запуск плагином "%FARPROFILE%\luafar_init.lua" обусловлен флагом
   компиляции -DRUN_LUAFAR_INIT при сборке плагина.

2. Плагин LuaMacro собирается с заданным флагом компиляции -DRUN_LUAFAR_INIT.

shmuel 02.05.2015 19:57:59 +0200 - build 511

1. LuaFAR (generic plugin):
   - Параметр ENV_PREFIX ликвидирован. Переменные окружения при инициализации плагина теперь
     игнорируются, за исключением %FARPROFILE%.