@@ -1,4 +1,8 @@
-﻿shmuel 17.08.2015 18:56:17 +0200 - build 523
+﻿shmuel 31.08.2015 18:33:16 +0200 - build 524
+
+1. M#3068: LuaFAR: не работает изменение цветовых атрибутов в DN_CTLCOLORDLGITEM
+
+shmuel 17.08.2015 18:56:17 +0200 - build 523
 
 1. M#3035: LuaFAR: Запретить обработку событий в диалогах во время вывода сообщения об ошибке
 
